<resources>
    <string name="app_name">雀事通</string>
    <string name="register_acount_hint">请输入手机号码作为登录账号</string>
    <string name="register_password_hint">请输入不少于6位的密码</string>
    <string name="register_password_again_hint">再次输入密码</string>
    <string name="register">注册</string>
    <string name="getCode">获取验证码</string>
    <string name="login">登录</string>
    <string name="login_hit">账号/手机号</string>
    <string name="login_acount_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="order">订单</string>
    <string name="revise_password_hint">请输入新密码</string>
    <string name="revise_makesure">确认修改</string>
    <string name="set_newPassword">设置新密码</string>
    <string name="main">首页</string>
    <string name="my">我的</string>
    <string name="login_register">注册/登录</string>
    <string name="myOrder">我的订单</string>
    <string name="myRefund">我的退款</string>
    <string name="refund">退款</string>
    <string name="refundDetail">退款详情</string>
    <string name="myCollection">我的收藏</string>
    <string name="myEvaluate">我的评价</string>
    <string name="myDazi">我的搭子</string>
    <string name="help">帮助</string>
    <string name="contactService">联系客服</string>
    <string name="about">关于</string>
    <string name="shopJoin">商户加盟</string>
    <string name="please_login">你还没有登录,请登录后查看订单</string>
    <string name="input_shop_name">输入商家名、品类或商圈</string>
    <string name="business">商家</string>
    <string name="dazi">搭子</string>
    <string name="myinvite">我的邀约</string>
    <string name="myyingyue">我的应约</string>
    <string name="dazi_record">搭子记录</string>
    <string name="shopping_mall">商城</string>
    <string name="popularity_recommend">人气推荐</string>
    <string name="nearby_shopping_mall">附近棋牌室</string>
    <string name="invite">发邀约</string>
    <string name="dazi_detail">搭子详情</string>
    <string name="lastUpdateTime">最后更新时间:</string>
    <string name="upFresh">上拉加载</string>
    <string name="money">￥</string>
    <string name="addOrderTime">下单时间</string>
    <string name="orderNumber">订单编号</string>
    <string name="orderMoney">订单金额</string>
    <string name="orderStatus">订单状态</string>
    <string name="forPay">待付款</string>
    <string name="forEvaluate">待评价</string>
    <string name="pay">付款</string>
    <string name="evaluate">评价</string>
    <string name="release">发布</string>
    <string name="reserve">预订</string>
    <string name="businessReply">商家回复:</string>
    <string name="goods">商品</string>
    <string name="fromAlbumChoice">从相册中选取</string>
    <string name="photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="sales">月售</string>
    <string name="fen">份</string>
    <string name="repair">维修</string>
    <string name="setting">设置</string>
    <string name="submitorder">提交订单</string>
    <string name="orderdetail">订单详情</string>
    <string name="empty"></string>
    <string name="string_empty"></string>
    <string name="pop_join_prompt">如果您被对方选中，您将看到对方联系方式，同时，您的联系方式也将被对方看到</string>
    <string name="nicheng">昵称</string>
    <string name="nicheng_setting">设置昵称</string>
    <string name="confirm">确定</string>
    <string name="refuse">拒绝</string>
    <string name="no_data">没有找到符合条件的房源</string>
    
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

</resources>
