<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <include
        android:id="@+id/login_title"
        layout="@layout/activity_title" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        style="@style/EditView_account"
        android:background="@drawable/circle_transparent_black"
        android:hint="@string/login_hit"
        android:textSize="@dimen/normal_16sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/EditView_password"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_transparent_black"
        android:hint="@string/login_password_hint"
        android:textSize="@dimen/normal_16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/select_btn_green"
        android:text="@string/login"
        android:textColor="@color/white" />
<!--     <LinearLayout     -->
<!--             android:id="@+id/viewGroup"     -->
<!--             android:layout_width="wrap_content"     -->
<!--             android:layout_height="wrap_content"       -->
<!--             android:layout_alignParentBottom="true"    -->
<!--             android:gravity="center_horizontal"     -->
<!--             android:orientation="horizontal" >     -->
<!--         </LinearLayout> -->


</LinearLayout>