<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include 
        android:id="@+id/ll_storeName"
        layout="@layout/item_order_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_order_image"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"
            android:src="@color/gray2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/iv_order_image"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addOrderTime"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />

                <TextView
                    android:id="@+id/tv_order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderNumber"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderMoney"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/money"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />

                <TextView
                    android:id="@+id/tv_order_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_heise_504f4f"
                    android:textSize="@dimen/small_14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_order_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_my_selector"
            android:gravity="center"
            android:text="再来一单"
            android:textColor="@color/text_color_heise_504f4f"
            android:textSize="@dimen/small_14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_order_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/item_my_selector"
            android:gravity="center"
            android:text="去评价"
            android:textColor="@color/text_color_heise_504f4f"
            android:textSize="@dimen/small_14sp" />
    </LinearLayout>

</LinearLayout>