<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_goodsdetail"
        layout="@layout/activity_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_goodsdetail_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_below="@id/title_goodsdetail"
                android:background="@color/gray2"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/iv_goodsdetail_image"
                android:background="@color/white" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_goodsdetail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_heise_504f4f"
                        android:textSize="@dimen/normal_18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sales"
                            android:textColor="@color/text_color_shenhui_677582"
                            android:textSize="@dimen/small_14sp" />

                        <TextView
                            android:id="@+id/tv_goodsdetail_sales"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/text_color_shenhui_677582"
                            android:textSize="@dimen/small_14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fen"
                            android:textColor="@color/text_color_shenhui_677582"
                            android:textSize="@dimen/small_14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/money"
                            android:textColor="@color/text_color_hongse_ff4318"
                            android:textSize="@dimen/normal_16sp" />

                        <TextView
                            android:id="@+id/tv_goodsdetail_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/text_color_hongse_ff4318"
                            android:textSize="@dimen/large_22sp" />
                    </LinearLayout>
                </LinearLayout>
                <!-- <LinearLayout -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_alignParentBottom="true" -->
                <!-- android:layout_alignParentRight="true" -->
                <!-- android:layout_marginBottom="10dp" -->
                <!-- android:layout_marginRight="20dp" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:orientation="horizontal" > -->
                <!-- <ImageView -->
                <!-- android:id="@+id/civ_goodsdetail_reduce" -->
                <!-- android:layout_width="25dp" -->
                <!-- android:layout_height="25dp" -->
                <!-- android:src="@drawable/reduce" /> -->
                <!-- <TextView -->
                <!-- android:id="@+id/tv_goodsdetail_number" -->
                <!-- android:layout_width="wrap_content" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:layout_gravity="center_vertical" -->
                <!-- android:layout_marginLeft="8dp" -->
                <!-- android:layout_marginRight="8dp" -->
                <!-- android:text="0" -->
                <!-- android:textColor="@color/text_color_heise_504f4f" -->
                <!-- android:textSize="@dimen/normal_18sp" /> -->
                <!-- <ImageView -->
                <!-- android:id="@+id/civ_goodsdetail_add" -->
                <!-- android:layout_width="25dp" -->
                <!-- android:layout_height="25dp" -->
                <!-- android:src="@drawable/add" /> -->
                <!-- </LinearLayout> -->
x                <com.chesssystem.shoppingcar.CicleAddAndSubView
                    android:id="@+id/bt_add_reduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp" >
                </com.chesssystem.shoppingcar.CicleAddAndSubView>
            </RelativeLayout>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_shoppingcar_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:visibility="gone"
            android:background="@drawable/bg_transparent">
            <View
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:background="@drawable/bg_transparent" />
            <TextView 
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="购物车"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textColor="@color/text_color_shenhui_677582"
                android:textSize="@dimen/normal_16sp"/>
            <View 
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/gray2"/>
            <ListView 
                android:id="@+id/lv_shopppingcar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@color/white"
                android:scrollbars="none"
                android:background="@color/white">
            </ListView>
        </LinearLayout>
    </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@color/text_color_heise_504f4f"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_shoppingcar_bottom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/text_color_heise_504f4f"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/shop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="合计 ￥ "
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_16sp" />

                <TextView
                    android:id="@+id/tv_shoppingcar_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_goodsdetail_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/text_color_huangse_ff8800"
                android:gravity="center"
                android:text="去结算"
                android:textColor="@color/white"
                android:textSize="@dimen/large_22sp"
                android:visibility="gone" />
        </LinearLayout>
</LinearLayout>